# test-repo

./: .gitignore  .pre-commit-config.yaml  README.md  init.sh  mini_test.sh  pyproject.toml  requirements.yaml  test.json
.devcontainer/: devcontainer.json
config/: filter.yaml  main.yaml  paths.yaml  process_rawts.yaml  random_select.yaml  representation.yaml  score.yaml  segment_audio.yaml
config/vis/: ppgs.yaml
data/mini_test_v2/: OLD.segments.json  segments copy.json  segments.json  segments.new.json
data/mini_test_v2/tsv/: dev_04.ha.P115.tsv  dev_11.ha.P183.tsv
data/minitests/mini_test_v2/: segments.json
data/minitests/mini_test_v2/tsv/: dev_03.aria.P095.tsv  dev_12.aria.P190.tsv
data/minitests/mini_test_v3/manifests/: test_01.aria.P100.json
outputs/2025-09-24/14-58-49/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-24/14-59-26/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-24/15-01-20/.hydra/: hydra.yaml
scratch/: neat_trim.py  randomise.py  restore_filtered.py
src/: animate_segments.py  audio_segments.py  auto_filter.py  filter_experiment.py  filtered.json  get_representations.py  json_to_tsv.py  listening_test.py  mini_test.py  process_raw_transcripts.py  score_filtered.py  segment_audio.py  stagger_filtered.py  user_filter.py  utils.py  wer.py
src/markdown/: begin.md  effort.md  important.md  summary.md  task.md  training.md  transcript.md  volume.md  welcome.md
src/old_tests/: mini_test.py
src/vis/: listening_test.py  view_ppgs.py
transcripts/: Jack.json  Jon.json  Stefan.json  a.json  robbie.json  ssg.json
(+2 files in other folders)
