[project]
name = "echi-listeningtests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "tqdm>=4.67.1",
]
